--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8083
 spring.redis.host=120.78.159.149
 spring.redis.port=12581
 spring.redis.password=changwenbo
+
+logging.file=cron.log
