--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.redis.port=12581
 spring.redis.password=changwenbo
 
 logging.file=cron.log
+logging.file.max-history=365
+logging.file.max-size=512MB
