--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.redis.host=120.78.159.149
 spring.redis.port=12581
 spring.redis.password=changwenbo
 
-#logging.config=classpath:logback-spring.xml
+logging.config=classpath:spring-logback.xml
