日志bug修复，暂时不搞了

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.redis.host=120.78.159.149
 spring.redis.port=12581
 spring.redis.password=changwenbo
 
-logging.config=classpath:spring-logback.xml
+logging.file=cron.log
+logging.file.max-history=365
+logging.file.max-size=512MB
