--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
             <version>4.5.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
