--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,15 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+# Created by .ignore support plugin (hsz.mobi)
+### Example user template template
+### Example user template
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
+# IntelliJ project files
 .idea
-*.iws
 *.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+out
+gen
+.gitignore
+.idea/
+osc.iml
+src/main/resources/static/
+src/main/resources/templates/
+target/
