异常微信通知

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+# tomcat服务器端口
 server.port=8083
 
+# redis配置
 spring.redis.host=120.78.159.149
 spring.redis.port=12581
 spring.redis.password=changwenbo
 
+# 日志
 logging.config=classpath:logback.xml
+
+# 微信配置
+userIds=orPQ802BC_a-JkvaNTTQUoQWAs4kqO0pGk7RGY
+template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
