--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.redis.password=changwenbo
 # 日志
 logging.config=classpath:logback.xml
 
-# 微信配置
+# 微信通知配置
 userIds=orPQ802BC_a-JkvaNTTQUoQWAs4kqO0pGk7RGY
 template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
