--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,17 @@ logging.config=classpath:logback.xml
 # 微信通知配置
 userIds=orPQ802BC_a-JkvaNTTQUoQWAs4kqO0pGk7RGY
 template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
+
+# 缓存
+spring.cache.type=ehcache
+
+# 数据库
+spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test
+spring.datasource.username=root
+spring.datasource.password=wenbochang888
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.generate.java.target=src/main/java
+mybatis.generate.resource.target=src/main/resources
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+logging.level.com..gdufe.osc.dao.mapper=debug
