修改知乎爬虫

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,8 @@ spring.datasource.username=root
 spring.datasource.password=wenbochang888
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# mybatis≈‰÷√
 mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-logging.level.com..gdufe.osc.dao.mapper=debug
+#logging.level.com..gdufe.osc.dao.mapper=debug
