--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
 spring.cache.type=ehcache
 
 # Êý¾Ý¿â
-spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test
+spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=wenbochang888
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
