--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,13 @@
             <!--<version>1.2.62</version>-->
         <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.arronlong</groupId>
