--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8083
 
 # redis配置
 spring.redis.host=120.78.159.149
-spring.redis.port=12581
-spring.redis.password=changwenbo
+spring.redis.port=${redis_port}
+spring.redis.password=${redis_password}
 
 # 日志
 logging.config=classpath:logback.xml
@@ -18,8 +18,8 @@ spring.cache.type=ehcache
 
 # 数据库
 spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=wenbochang888
+spring.datasource.username=${mysql_username}
+spring.datasource.password=${mysql_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis配置
