采用hikari连接池

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
 spring.datasource.username=${mysql_username}
 spring.datasource.password=${mysql_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 # Druid其他配置
 # 初始化大小
