多数据源配置

--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,11 @@
 
         <!-- mybatis默认采用HikariCP连接池 这里采用阿里的druid -->
         <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.21</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba</groupId>-->
+<!--            <artifactId>druid-spring-boot-starter</artifactId>-->
+<!--            <version>1.1.21</version>-->
+<!--        </dependency>-->
 
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
