--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,15 @@ mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #logging.level.com..gdufe.osc.dao.mapper=debug
+
+# 数据库
+spring.datasource.master.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
+spring.datasource.master.username=${mysql_username}
+spring.datasource.master.password=${mysql_password}
+spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 数据库
+spring.datasource.slave.url=jdbc:mysql://120.78.159.149:3306/seckill?useSSL=false
+spring.datasource.slave.username=${mysql_username}
+spring.datasource.slave.password=${mysql_password}
+spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
