--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,9 @@ template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
 # 缓存
 spring.cache.type=ehcache
 
-# 数据库
-spring.datasource.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
+# 数据库  逆向工程数据库表生成
+# 逆向工程不能识别环境变量，即可生成的时候改回来
+spring.datasource.url=jdbc:mysql://120.78.159.149:3306/seckill?useSSL=false
 spring.datasource.username=${mysql_username}
 spring.datasource.password=${mysql_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -25,7 +26,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis配置
 mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+## 多数据源，这配置就不适用了
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 #logging.level.com..gdufe.osc.dao.mapper=debug
 
 # 数据库
