--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.datasource.master.password=${mysql_password}
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Êý¾Ý¿â
-spring.datasource.slave.url=jdbc:mysql://120.78.159.149:3306/seckill?useSSL=false
+spring.datasource.slave.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
 spring.datasource.slave.username=${mysql_username}
 spring.datasource.slave.password=${mysql_password}
 spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
