暂时不请求七牛云存储的图片

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis配置
 mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
+#logging.level.com.gdufe.osc.dao.mapper.*=debug
 ## 多数据源，这配置就不适用了
 #mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-#logging.level.com..gdufe.osc.dao.mapper=debug
 
 # 数据库
 spring.datasource.master.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
