--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.datasource.druid.min-idle=10
 # ×î´ó
 spring.datasource.druid.max-active=20
 spring.datasource.druid.keep-alive=true
-spring.datasource.druid.filters=stat
+spring.datasource.druid.filters=stat,wall
 spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.slow-sql-millis=500
 
@@ -47,6 +47,8 @@ spring.datasource.druid.stat-view-servlet.reset-enable=true
 spring.datasource.druid.stat-view-servlet.login-username=${mysql_username}
 spring.datasource.druid.stat-view-servlet.login-password=${redis_password}
 spring.datasource.druid.filter.stat.merge-sql=true
+spring.datasource.druid.stat-view-servlet.allow=
+spring.datasource.druid.stat-view-servlet.deny=
 
 # mybatisÅäÖÃ
 mybatis.generate.java.target=src/main/java
