--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis配置
 mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
-#logging.level.com.gdufe.osc.dao.mapper.*=debug
+logging.level.com.gdufe.osc.dao.mapper.*=debug
 ## 多数据源，这配置就不适用了
 #mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
