--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,49 @@
-# tomcat服务器端口
+# tomcat\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02FF\uFFFD
 server.port=8083
 
-# redis配置
+# redis\uFFFD\uFFFD\uFFFD\uFFFD
 spring.redis.host=120.78.159.149
 spring.redis.port=${redis_port}
 spring.redis.password=${redis_password}
 
-# 日志
+# \uFFFD\uFFFD\u05BE
 logging.config=classpath:logback.xml
 
-# 微信通知配置
+# \u03A2\uFFFD\uFFFD\u0368\u05AA\uFFFD\uFFFD\uFFFD\uFFFD
 userIds=orPQ802BC_a-JkvaNTTQUoQWAs4kqO0pGk7RGY
 template_id=lpO9UoVZYGENPpuND3FIofNueSMJZs0DMiU7Bl1eg2c
 
-# 缓存
+# \uFFFD\uFFFD\uFFFD\uFFFD
 spring.cache.type=ehcache
 
-# 数据库  逆向工程数据库表生成
-# 逆向工程不能识别环境变量，即可生成的时候改回来
+# \uFFFD\uFFFD\uFFFD\u077F\uFFFD  \uFFFD\uFFFD\uFFFD\uDAA6\uDD33\uFFFD\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+# \uFFFD\uFFFD\uFFFD\uDAA6\uDD33\u0332\uFFFD\uFFFD\uFFFD\u02B6\uFFFD\uD8AF\uDDFE\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0275\uFFFD\u02B1\uFFFD\uFFFD\u013B\uFFFD\uFFFD\uFFFD
 spring.datasource.url=jdbc:mysql://120.78.159.149:3306/seckill?useSSL=false
 spring.datasource.username=${mysql_username}
 spring.datasource.password=${mysql_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# mybatis配置
+# mybatis\uFFFD\uFFFD\uFFFD\uFFFD
 mybatis.generate.java.target=src/main/java
 mybatis.generate.resource.target=src/main/resources
 #logging.level.com.gdufe.osc.dao.mapper.*=debug
-## 多数据源，这配置就不适用了
+## \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0534\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u00FE\u0372\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 #mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-# 数据库
+# \uFFFD\uFFFD\uFFFD\u077F\uFFFD
 spring.datasource.master.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
 spring.datasource.master.username=${mysql_username}
 spring.datasource.master.password=${mysql_password}
 spring.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 数据库
+# \uFFFD\uFFFD\uFFFD\u077F\uFFFD
 spring.datasource.slave.url=jdbc:mysql://120.78.159.149:3306/test?useSSL=false
 spring.datasource.slave.username=${mysql_username}
 spring.datasource.slave.password=${mysql_password}
 spring.datasource.slave.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# zk
+zk.host=120.78.159.149:2181
+zk.maxRetry=3
+zk.sessionTimeout=60000
+zk.connectTimeout=10000
