--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ before_install:
   - chmod 777 mvnw
 jdk:
   - openjdk8
+script: mvn clean install -U -DskipTests=false -Dmaven.javadoc.skip=false
 after_success:
   - bash <(curl -s https://codecov.io/bash)
