--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,15 @@
             <version>4.3.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
