--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ before_install:
   - chmod 777 mvnw
 jdk:
   - openjdk8
-script: mvn clean install -U -DskipTests=false -Dmaven.javadoc.skip=false
+branches:
+  only:
+    - master
+    - changwenbo-dev
+
+script: mvn clean install -U -Dmaven.test.skip=false -Dmaven.javadoc.skip=false
 after_success:
   - bash <(curl -s https://codecov.io/bash)
